<resources>
    <string name="app_name">Vital Analyser</string>
    <string name="todo">TODO</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vital">vital</string>
    <string name="logo">logo</string>
    <string name="analyser">analyser</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="bpm">BPM</string>
    <string name="persatage">%</string>
    <string name="hard_working_team">Hard Working Team</string>
    <string name="duumy_spo2">96</string>
    <string name="duumy_bpm">62</string>
    <string name="graph_image">graph_image</string>
    <string name="title_activity_setting">setting</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="profile">Profile</string>
    <string name="setting">Tutorial</string>
    <string name="exit">Exit</string>
    <string name="tutorial_image">tutorial</string>
    <string name="support_example_email">vitalanalyser@support.example</string>


</resources>