<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/nav_dot_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:visible="true" />
        <item
            android:id="@+id/nav_dot_login"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"
            />
        <item
            android:id="@+id/nav_dot_Help"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting"
             />

        <item
            android:id="@+id/nav_dot_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about"
             />
        <item
            android:id="@+id/nav_dot_exit"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/exit"
            />
</menu>