<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="248dp"
        android:layout_height="247dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"
        tools:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/vital"
        android:layout_width="265dp"
        android:layout_height="165dp"
        android:contentDescription="@string/vital"
        android:src="@drawable/vital"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.155"
        tools:srcCompat="@drawable/vital" />

    <ImageView
        android:id="@+id/ana"
        android:layout_width="287dp"
        android:layout_height="141dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/analyser"
        android:src="@drawable/analayser"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vital"
        tools:srcCompat="@drawable/analayser" />
</androidx.constraintlayout.widget.ConstraintLayout>